# tether

./: .dockerignore  .env.example  .envrc  .gitignore  .mcp.json  AGENTS.md  CONTEXT.md  Dockerfile  Justfile  LICENSE  README.md  TETHER_REWRITE_BRIEF.md  compose.yaml  justfile  openapi.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/agent/: eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json
apps/agent/scripts/: generate-tool-shims.ts
apps/agent/src/: runtime.ts
apps/agent/tests/: generate-tool-shims.test.ts  generated-tools.test.ts  runtime.test.ts
apps/agent/tests/fixtures/: faux-agent-loop.ts  faux-chat-text.ts  faux-review-digest.ts  faux-triage.ts  model-echo-faux.ts
apps/capture-android/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
apps/capture-android/app/: build.gradle.kts
apps/capture-android/core/: build.gradle.kts
apps/capture-android/wear/: README.md  build.gradle.kts  proguard-rules.pro
apps/host/: pyproject.toml
apps/host/tests/: pi_runtime_fakes.py  surfaces.py  test_agent_loop.py  test_agent_trace.py  test_artifact_surfaces.py  test_auth.py  test_bucket_item_index.py  test_bucket_item_reconciler.py  test_bucket_items_service.py  test_bucket_routes.py  test_bucket_surfaces.py  test_bucket_tools.py  test_capabilities.py  test_capture_routes.py  test_chat_engine.py  test_chat_frames.py  test_conversation_history_tools.py  test_conversation_import_parsers.py  test_conversation_routes.py  test_conversation_service.py  test_db_retry.py  test_ebook_stats.py  test_embeddings.py  test_escalating_pause.py  test_gmail.py  test_gmail_actions.py  test_gmail_boot.py  test_gmail_purge.py  test_hybrid_lance_table.py  test_internal_tools.py  test_kosync.py  test_kosync_surfaces.py  test_logging.py  test_memories_service.py  test_memory_routes.py  test_memory_search_service.py  test_memory_surfaces.py  test_notifications.py  test_openapi.py  test_openapi_export.py  (+63 more)
apps/host/tests/fixtures/conversation_import/: t3chat_export.json
apps/host/tests/typing/: context_contract.py
apps/host/tether/: __main__.py  action_registry.py  agent_trace.py  artifact_capabilities.py  artifact_routes.py  artifact_tools.py  artifacts.py  auth.py  bucket_capabilities.py  bucket_item_index.py  bucket_item_reconciler.py  bucket_items.py  bucket_routes.py  bucket_tools.py  capabilities.py  capture_routes.py  chat_engine.py  chat_frames.py  chat_ws.py  conversation_history_tools.py  conversation_import.py  conversations.py  db_retry.py  ebook_stats.py  embeddings.py  escalating_pause.py  events.py  gmail.py  gmail_actions.py  gmail_auth.py  gmail_oauth.py  gmail_purge.py  hybrid_lance_table.py  kosync.py  kosync_capabilities.py  kosync_routes.py  kosync_tools.py  logging.py  memories.py  memory_capabilities.py  (+69 more)
apps/host/tether/api/: __init__.py  app.py  contract.py
apps/host/typings/lancedb/: __init__.pyi  db.pyi  index.pyi  query.pyi  rerankers.pyi  table.pyi
apps/server/: package.json  pyproject.toml
apps/server/src/: main.ts
apps/server/tests/: test_capture_memory.py  test_memory_document.py
apps/server/tether/memory/: __init__.py  errors.py
apps/web/: .gitignore  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/web/e2e/: chat-artifacts.spec.ts  chat-llm.spec.ts  chat-widgets.spec.ts  console-guard.test.ts  console-guard.ts  fixtures.ts  login.spec.ts  memories.spec.ts  recall.spec.ts  reminders.spec.ts  responsive.spec.ts
apps/web/scripts/: generate-client.mjs  smoke-collector.mjs  smoke-collector.test.mjs  smoke.mjs
apps/web/src/: api.test.ts  api.ts  app-context.tsx  app.test.tsx  app.tsx  chat-bus.test.ts  chat-bus.ts  chat-scroll.test.ts  chat-scroll.ts  chat-timeline.test.ts  chat-timeline.ts  chat-view.test.tsx  chat-view.tsx  index.tsx  login.test.tsx  login.tsx  main.tsx  rest-client-smoke.test.ts  session-freshness.test.ts  session-freshness.ts  shell.test.tsx  shell.tsx  styles.css  todo-list.test.tsx  todo-list.tsx  voice-recorder.test.ts  voice-recorder.ts
apps/web/src/components/: artifact-viewer.test.tsx  artifact-viewer.tsx  message-content.test.tsx  message-content.tsx  segmented-control.tsx  voice-composer.tsx
apps/web/src/lib/: format.test.ts  format.ts  http-errors.test.ts  http-errors.ts  panel.ts  query-keys.ts  tool-result.test.ts  tool-result.ts
apps/web/src/pages/: browse-page.test.tsx  browse-page.tsx  chat-page.test.tsx  chat-page.tsx  inbox-page.test.tsx  inbox-page.tsx  proposals-page.test.tsx  proposals-page.tsx  settings-page.test.tsx  settings-page.tsx
apps/web/src/panels/: bucket.test.tsx  bucket.tsx  memories.test.tsx  memories.tsx  notifications.test.tsx  notifications.tsx  proposals.test.tsx  proposals.tsx  push.tsx  (+11 more)
deploy/: .env.example  backup.sh  cloud-init.yaml  restic.env.example  tether-backup.service  tether-backup.timer
docs/: architecture.md  chat-ux-findings.md  deploy.md  deployment.md  development.md  principles.md
docs/adr/: 0001-memories-provisional-until-review.md  0001-tether-owns-chat-pi-behind-a-port.md  0002-single-agent-with-tools.md  0003-sqlite-source-of-truth-markdown-derived.md  0004-two-tethering-paths-review-and-recall.md  0005-pi-runtime-over-rpc-with-generated-tool-shims.md  0006-search-recomputed-never-cached.md  0007-kb-filenames-are-memory-uuid.md  0008-custom-starlette-route-contract-layer.md  0009-hybrid-search-embedded-lancedb-projection.md  0010-provenance-trust-classes.md  0011-widget-artifact-presentation-split.md  0012-telemetry-never-enters-memory.md  0013-health-telemetry-separate-store.md  0014-proposals-explicit-action-sets.md  0015-teaching-vertical-ported-teach-skill.md  0016-building-blocks-vs-bespoke-verticals.md  0017-project-vertical-generic-multi-step-tracking.md  0018-stt-required-host-dependency.md  0019-todo-vertical.md
docs/prd/: 0001-memory-capture-and-recall.md
docs/product/: overview.md
docs/research/: ebook-progress-integrations.md  pixel-watch-tile.md
scripts/: validate-host-logs.sh  validate-web-smoke.sh
(+46 files in other folders)
