[project]
name = "tether"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
    "starlette>=1.3.1",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "ruff>=0.15.18",
    "snekql",
    "snektest",
]

[tool.uv.sources]
snekql = { path = "../../../snekql", editable = true }
snektest = { path = "../../../snektest", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
