[project]
name = "tether"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
    "starlette>=1.3.1",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyright>=1.1.410",
    "ruff>=0.15.18",
    "snekql",
    "snektest",
]

[tool.uv.sources]
snekql = { path = "../../../snekql", editable = true }
snektest = { path = "../../../snektest", editable = true }

[tool.pyright]
# Keeps the context-type guard in tests/typing honest: if ApiRouter stops
# enforcing the handler context type, the deliberate `pyright: ignore` there
# becomes unnecessary and this rule fails the type check.
reportUnnecessaryTypeIgnoreComment = "error"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
