[project]
name = "tether"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "anyio>=4.14.0",
    "fastembed>=0.8.0",
    "httpx2>=2.5.0",
    "itsdangerous>=2.2.0",
    "lancedb>=0.33.0",
    "numpy>=2.5.0",
    "opentelemetry-api>=1.43.0",
    "opentelemetry-sdk>=1.43.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
    "snekql>=0.4.0",
    "starlette>=1.3.1",
    "structlog>=26.1.0",
    "uvicorn>=0.49.0",
    # uvicorn needs a WebSocket protocol implementation to upgrade `/ws`;
    # without it the running app 404s on the browser chat socket (the bare
    # `uvicorn` package does not pull one in).
    "websockets>=14.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyright>=1.1.410",
    "ruff>=0.15.18",
    "snektest",
]
# Real YouTube ingestion needs the Google OAuth + Data API clients. They are an
# optional group (not core deps) so the rest of Tether runs without them; the
# OAuth adapter imports them lazily and raises a clear error if they are absent.
# Install with `uv sync --group youtube` before running `just youtube-auth`.
youtube = [
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "youtube-transcript-api>=1.2.0",
]

[tool.uv.sources]
snektest = { path = "../../../snektest", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint.pyflakes]
allowed-unused-imports = [
  "snekql.sqlite.Fetched",
]

[tool.ruff.lint]
preview = false
select = [ "A", "ANN", "ARG", "ASYNC", "B", "BLE", "C4", "C90", "COM", "DTZ", "E", "EM", "ERA", "EXE", "F", "FAST", "FBT", "FURB", "G", "I", "INP", "ISC", "LOG", "N", "PERF", "PGH", "PIE", "PL", "PLE", "PLR", "PLW", "PTH", "PYI", "Q", "RET", "RSE", "RUF", "S", "SIM", "SLF", "SLOT", "T10", "T20", "TC", "TID", "TRY", "UP", "W" ]
ignore = [
  "ANN401",  # Allow the use of `typing.Any`.
  "BLE001",  # Allow using blind except (e.g. `except Exception`).
  "COM812",  # Don't require trailing commas. Ignored because it may interfere with formatting.
  "DOC201",  # Don't make me document return values.
  "E501",    # Allow long lines. Useful mostly for writing log and error messages: having them in a single line makes it easier to search for the message. Note that the formatter will still try to shorten line length whenever possible.
  "PLC1901", # Allow comparing with empty strings. This is needed when the variable could be another falsy value, like `None`.
  "PLW3201", # Let me create dunder methods
  "PTH110",  # Allow using `os.path.exists`. Removed because Path.exists is 4 times slower.
  "S311",    # Allow pseudo-random generators.
  "T201",    # Allow `print` statements. Useful mostly for debugging.
  "TC001",   # Don't suggest putting imports in `TYPE_CHECKING` blocks. Mostly makes sense for Python>=3.11.
  "TC002",   # Don't suggest putting third party imports in `TYPE_CHECKING` blocks. Mostly makes sense for Python>=3.11.
  "TC003",   # Don't suggest putting stdlib imports in `TYPE_CHECKING` blocks. Mostly makes sense for Python>=3.11.
  "S101",    # Allow use of `assert`.
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "ARG001",  # Allow unused function arguments. Stub route handlers in tests take Starlette request/body params they sometimes ignore.
  "ARG002",  # Allow unused method arguments. Test doubles implement Protocols whose signatures include params (e.g. `logger`) the stub ignores.
  "EM101",   # Allow string literals directly in raises. Test doubles raise stand-in errors inline.
  "EM102",   # Allow f-string literals directly in raises. Test doubles raise stand-in errors inline.
  "FBT003",  # Allow boolean positional values in function calls. This is useful for assert_* function.
  "N802",    # Don't force function names to be snake_case. Useful e.g. when writing tests for classes.
  "N818",    # Allow non-Error-suffixed exception names. Stand-in exceptions must mirror external library class names so name-based classification is exercised.
  "N999",    # Don't force module names to be snake_case. Useful e.g. when writing tests for classes.
  "PLR2004", # Allow magic numbers.
  "RUF029",  # Allow async functions without async features.
  "S101",    # Allow use of assert.
  "S105",    # Allow hardcoded password strings.
  "S106",    # Allow hardcoded password strings.
  "S107",    # Allow hardcoded password strings.
  "S404",    # Allow subprocess in tests.
  "S603",    # Allow subprocess in tests.
  "S607",    # Allow subprocess in tests.
  "S608",    # Allow string building with SQL.
  "SLF001",  # Allow private member access.
  "T100",    # Allow breakpoints in tests (we have some tests that really check breakopints).
  "TRY003",  # Allow long messages on stand-in exceptions raised inline in test doubles.
]

[tool.pyright]
# We manually manage all settings, because we want most of them enabled/"error", which
# would usually be done by setting `typeCheckingMode = "strict"`, but if we do that,
# then we can't disable some of the errors.
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md#diagnostic-settings-defaults

## This paragraph contains settings that are enabled/set to "error".
analyzeUnannotatedFunctions = true
disableBytesTypePromotions = true
strictParameterNoneValue = true
enableTypeIgnoreComments = true
enableReachabilityAnalysis = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
deprecateTypingAliases = true
enableExperimentalFeatures = true
reportMissingTypeStubs = "error"
reportMissingModuleSource = "error"
reportInvalidTypeForm = "error"
reportMissingImports = "error"
reportUndefinedVariable = "error"
reportAssertAlwaysTrue = "error"
reportInvalidStringEscapeSequence = "error"
reportInvalidTypeVarUse = "error"
reportSelfClsParameterName = "error"
reportUnsupportedDunderAll = "error"
reportUnusedExpression = "error"
reportWildcardImportFromLibrary = "error"
reportAbstractUsage = "error"
reportArgumentType = "error"
reportAssertTypeFailure = "error"
reportAssignmentType = "error"
reportAttributeAccessIssue = "error"
reportCallIssue = "error"
reportGeneralTypeIssues = "error"
reportInconsistentOverload = "error"
reportIndexIssue = "error"
reportInvalidTypeArguments = "error"
reportNoOverloadImplementation = "error"
reportOperatorIssue = "error"
reportOptionalSubscript = "error"
reportOptionalMemberAccess = "error"
reportOptionalCall = "error"
reportOptionalIterable = "error"
reportOptionalContextManager = "error"
reportOptionalOperand = "error"
reportRedeclaration = "error"
reportReturnType = "error"
reportTypedDictNotRequiredAccess = "error"
reportPrivateImportUsage = "error"
reportUnboundVariable = "error"
reportUnhashable = "error"
reportUnusedCoroutine = "error"
reportUnusedExcept = "error"
reportFunctionMemberAccess = "error"
reportIncompatibleMethodOverride = "error"
reportOverlappingOverload = "error"
reportPossiblyUnboundVariable = "error"
reportConstantRedefinition = "error"
reportDeprecated = "error"
reportDuplicateImport = "error"
reportIncompleteStub = "error"
reportInconsistentConstructor = "error"
reportInvalidStubStatement = "error"
reportMatchNotExhaustive = "error"
reportMissingParameterType = "error"
reportMissingTypeArgument = "error"
reportPrivateUsage = "error"
reportTypeCommentUsage = "error"
reportUnknownArgumentType = "error"
reportUnknownLambdaType = "error"
reportUnknownMemberType = "error"
reportUnknownParameterType = "error"
reportUnknownVariableType = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryComparison = "error"
reportUnnecessaryContains = "error"
reportUnnecessaryIsInstance = "error"
reportUnusedClass = "error"
reportUnusedImport = "error"
reportUnusedFunction = "error"
reportUnusedVariable = "error"
reportUntypedBaseClass = "error"
reportUntypedClassDecorator = "error"
reportUntypedFunctionDecorator = "error"
reportUntypedNamedTuple = "error"
reportCallInDefaultInitializer = "error"
reportImplicitStringConcatenation = "error"
reportImportCycles = "error"
reportPropertyTypeMismatch = "error"
reportUninitializedInstanceVariable = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnusedCallResult = "error"

## This paragraph contains settings that are disabled/set to "off".
# We almost always want subclasses to override parents with "incompatible" methods.
# E.g. when subclassing stlib classes like `Thread`.
reportIncompatibleVariableOverride = false
# Most of the time, we don't want to call the parent's method, we want to 
# change its behavior instead.
reportMissingSuperCall = false
# This is a bit too noisy, since it complains when overriding something like
# ___str__ on a base class, which is not a problem in practice.
reportImplicitOverride = false

# Tests exercise patterns that the strict production rules flag as false positives:
# route handlers declared inside test bodies (never referenced by name), calls kept
# for their side effects, and deliberate private-member access. Relax only these
# rules under `tests/`; everything else stays strict so production code keeps full
# coverage.
[[tool.pyright.executionEnvironments]]
root = "tests"
# Keep the package root importable so first-party `tether.*` modules resolve as
# local source rather than an unstubbed third-party library.
extraPaths = ["."]
reportUnusedFunction = false
reportUnusedCallResult = false
reportPrivateUsage = false
