[project]
name = "tether"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anyio>=4.14.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "snekql",
    "starlette>=1.3.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "ruff>=0.15.17",
    "snektest",
]

[tool.uv.sources]
snektest = { path = "../../../snektest", editable = true }
snekql = { path = "../../../snekql", editable = true }

[tool.ruff.lint.pyflakes]
allowed-unused-imports = [
  "snekql.sqlite.Fetched",
]

[tool.ruff.lint]
preview = true
select = [ "A", "ANN", "ARG", "ASYNC", "B", "BLE", "C4", "C90", "COM", "DTZ", "E", "EM", "ERA", "EXE", "F", "FAST", "FBT", "FURB", "G", "I", "INP", "ISC", "LOG", "N", "PERF", "PGH", "PIE", "PL", "PLE", "PLR", "PLW", "PTH", "PYI", "Q", "RET", "RSE", "RUF", "S", "SIM", "SLF", "SLOT", "T10", "T20", "TC", "TID", "TRY", "UP", "W" ]
extend-select = [
  # Select only some of the `TD` rules.
  "TD004",   # Check for colon after "TODO" keyword.
  "TD005",   # Check for description.
  "TD006",   # Check for proper capitalization.
  "TD007",   # Check for missing space after colon.
]
ignore = [
  "ANN401",  # Allow the use of `typing.Any`.
  "BLE001",  # Allow using blind except (e.g. `except Exception`).
  "COM812",  # Don't require trailing commas. Ignored because it may interfere with formatting.
  "E501",    # Allow long lines. Useful mostly for writing log and error messages: having them in a single line makes it easier to search for the message. Note that the formatter will still try to shorten line length whenever possible.
  "PLC1901", # Allow comparing with empty strings. This is needed when the variable could be another falsy value, like `None`.
  "PLW3201", # Let me create dunder methods
  "PTH110",  # Allow using `os.path.exists`. Removed because Path.exists is 4 times slower.
  "S311",    # Allow pseudo-random generators.
  "T201",    # Allow `print` statements. Useful mostly for debugging.
  "TC001",   # Don't suggest putting imports in `TYPE_CHECKING` blocks. Mostly makes sense for Python>=3.11.
  "TC002",   # Don't suggest putting third party imports in `TYPE_CHECKING` blocks. Mostly makes sense for Python>=3.11.
  "TC003",   # Don't suggest putting stdlib imports in `TYPE_CHECKING` blocks. Mostly makes sense for Python>=3.11.
  "RUF067",  # TODO: remove this temporary rule
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "FBT003",  # Allow boolean positional values in function calls. This is useful for assert_* function.
  "N802",    # Don't force function names to be snake_case. Useful e.g. when writing tests for classes.
  "N999",    # Don't force module names to be snake_case. Useful e.g. when writing tests for classes.
  "PLR2004", # Allow magic numbers.
  "RUF029",  # Allow async functions without async features.
  "S101",    # Allow use of assert.
  "S105",    # Allow hardcoded password strings.
  "S106",    # Allow hardcoded password strings.
  "S107",    # Allow hardcoded password strings.
  "S404",    # Allow subprocess in tests.
  "S603",    # Allow subprocess in tests.
  "S607",    # Allow subprocess in tests.
  "S608",    # Allow string building with SQL.
  "SLF001",  # Allow private member access.
  "T100",    # Allow breakpoints in tests (we have some tests that really check breakopints).
]
